--- a/gazetter/assets/css/stylesheet.css
+++ b/gazetter/assets/css/stylesheet.css
@@ -1,7 +1,7 @@
 #map {
-    height: 100vh;
-    width: 100%;
-  }
+  height: 100vh;
+  width: 100%;
+}
 
 .football {
   max-width: 50%;
@@ -22,31 +22,88 @@
 }
 
 .modal-dialog {
-  margin: 10% auto;
-  width: 60%;
+  margin: 1% auto;
+  width: 80%;
   max-width: 600px;
-  height: 60%;
-  top: 0%; 
+  height: 50%;
 }
 
 .modal-content {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
+  background-color: #eae4ee;
+  padding: 10px;
+  border-radius: 15px;
 }
 
 .modal-body {
-  padding: 10px;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
 .modal-header {
-  background-color: #f1f1f1;
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+  background-color: #eae4ee;
+  padding: 0px;
+  border-bottom: 2px solid black;
   border-radius: 5px 5px 0 0;
+}
+
+p {
+  color: #666;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.modal-content {
+  overflow: hidden;
+}
+
+.modal-image {
+  max-width: 100%;
+  max-height: 150px;
+  object-fit: contain;
+  padding-bottom: 10px;
+}
+
+.modal-text {
+  overflow: auto;
 }
 
 .modal-title {
   font-weight: bold;
-  margin: 0;
+  margin: 10px;
+}
+
+#locationPhoto {
+  max-width: 100%; 
+  max-height: 400px;
+}
+
+/* Responsive Design */
+
+@media only screen and (max-width: 768px) {
+  .football {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .modal-dialog {
+    margin: 20% auto;
+    width: 90%;
+    max-height: 80%;
+  }
+
+  .modal-image {
+    max-height: 200px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .modal-dialog {
+    margin: 30% auto;
+    max-height: 90%;
+  }
 }
