--- a/gazetter/assets/css/stylesheet.css
+++ b/gazetter/assets/css/stylesheet.css
@@ -1,109 +1,32 @@
+* {
+  margin: 0; 
+  padding: 0
+}
+
+.map-container {
+  margin: 0 !important;
+}
+
+
 #map {
   height: 100vh;
   width: 100%;
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
-.football {
-  max-width: 50%;
-  max-height: 50%;
-}
-
-/* Modal styles */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.modal-dialog {
-  margin: 1% auto;
-  width: 80%;
-  max-width: 600px;
-  height: 50%;
-}
-
-.modal-content {
-  background-color: #eae4ee;
-  padding: 10px;
-  border-radius: 15px;
-}
-
-.modal-body {
-  padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.modal-header {
-  background-color: #eae4ee;
-  padding: 0px;
-  border-bottom: 2px solid black;
-  border-radius: 5px 5px 0 0;
+.dropdown {
+  position: absolute !important; 
+  top: 0 !important; 
+  left: 0 !important; 
+  right: 0 !important; 
+  margin: auto !important; 
+  z-index: 1000 !important; 
+  text-align: center !important; 
+  width: 100% !important;
 }
 
 p {
-  color: #666;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
-.modal-content {
-  overflow: hidden;
-}
-
-.modal-image {
-  max-width: 100%;
-  max-height: 150px;
-  object-fit: contain;
-  padding-bottom: 10px;
-}
-
-.modal-text {
-  overflow: auto;
-}
-
-.modal-title {
-  font-weight: bold;
-  margin: 10px;
-}
-
-#locationPhoto {
-  max-width: 100%; 
-  max-height: 400px;
-}
-
-/* Responsive Design */
-
-@media only screen and (max-width: 768px) {
-  .football {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .modal-dialog {
-    margin: 20% auto;
-    width: 90%;
-    max-height: 80%;
-  }
-
-  .modal-image {
-    max-height: 200px;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  .modal-dialog {
-    margin: 30% auto;
-    max-height: 90%;
-  }
+  font-size: 15px;
+  line-height: 1;
 }
